make all marginal notes <small>

--- a/_chapters/sc-1867-68-c-01.md
+++ b/_chapters/sc-1867-68-c-01.md
@@ -52,7 +52,7 @@ bill: No. 2
   </ul>
 </nav>
 {% include acttopmatter.md %}
-Preamble.
+<small>Preamble.</small>
 {: .marginal-note}
 {% include enacts.md %}
 
