--- a/_sections/sc-1867-68-c-01-s-08.md
+++ b/_sections/sc-1867-68-c-01-s-08.md
@@ -7,7 +7,7 @@ chapter: 1
 section: 8
 permalink: /en/statutes/sc/1867-68/c-1/s-8.html
 ---
-Acts to be done by more than two.
+<small>Acts to be done by more than two.</small>
 {:.marginal-note}
 <span>8</span>{:.section-label}{:#s-8} When any act or thing is required to be done by more than two persons, a majority of them may do it.
 {:.section}
