--- a/_sections/sc-1867-68-c-01-s-10.md
+++ b/_sections/sc-1867-68-c-01-s-10.md
@@ -10,15 +10,15 @@ permalink: /en/statutes/sc/1867-68/c-1/s-10.html
 
 <ul class="section provision-list">
   <li>
-    <p class="marginal-note">Printer to distribute printed copies of Acts.</p>
+    <p class="marginal-note"><small>Printer to distribute printed copies of Acts.</small></p>
     <p class="subsection"><span class="section-label" id="s-10">10</span> Her Majesty&rsquo;s Printer shall, immediately after the close of each Session of Parliament, or so soon after as may be practicable, deliver or transmit by Post, or otherwise, in the most economical mode, the proper number of printed copies of the Acts of Parliament, in the English language or French language, or both languages, (to be printed by him at the public expense,) to the parties hereinafter mentioned, that is to say:</p>
   </li>
   <li>
-    <p class="marginal-note">Who shall receive such copies.</p>
+    <p class="marginal-note"><small>Who shall receive such copies.</small></p>
     <p class="subsection">To the members of the two Houses of Parliament, respectively, such numbers of copies each as may from time to time be directed by any joint resolution of the said Houses, or in default of such resolution, in such numbers as shall be directed by order of the Governor General in Council, and to such public departments, administrative bodies and officers, throughout Canada, as may be specified in any order to be for that purpose made from time to time by the Governor General in Council;</p>
   </li>
   <li>
-    <p class="marginal-note">As to Bills assented to during and before the end of the session.</p>
+    <p class="marginal-note"><small>As to Bills assented to during and before the end of the session.</small></p>
     <p class="subsection">Provided that when any Bill receives the Royal assent during and before the termination of any session of Parliament, Her Majesty&rsquo;s Printer shall, on intimation to that effect from the Secretary of State of Canada, cause distribution to be made of such number of copies thereof, to the same parties, and in like manner as is hereinbefore provided, in regard to the Acts of any Session.</p>
   </li>
 </ul>
