--- a/_sections/sc-1867-68-c-01-s-11.md
+++ b/_sections/sc-1867-68-c-01-s-11.md
@@ -7,7 +7,7 @@ chapter: 1
 section: 11
 permalink: /en/statutes/sc/1867-68/c-1/s-11.html
 ---
-List to be furnished of persons to receive copies.
+<small>List to be furnished of persons to receive copies.</small>
 {:.marginal-note}
 <span>11</span>{:.section-label}{:#s-11} The Secretary of State of Canada shall, within fifteen days after the close of each session of Parliament, transmit to Her Majesty's Printer a list of all the public departments, administrative bodies and officers to whom such copies are to be transmitted as aforesaid, and shall also, from time to time, as occasion requires, furnish him with copies of all Orders in Council made under the provisions of this Act.
 {:.section}
