--- a/_sections/sc-1867-68-c-01-s-13.md
+++ b/_sections/sc-1867-68-c-01-s-13.md
@@ -7,8 +7,8 @@ chapter: 1
 section: 13
 permalink: /en/statutes/sc/1867-68/c-1/s-13.html
 ---
-How Statutes shall be printed and bound.  
-Classification of Statutes.
+<small>How Statutes shall be printed and bound.</small>  
+<small>Classification of Statutes.</small>
 {:.marginal-note}
 <span>13</span>{:.section-label}{:#s-13} The Statutes shall be printed in royal octavo form, on fine paper, in Small Pica Type, thirty-two ems by fifty-five ems, including marginal notes in Minion, such notes referring to the year and chapter of previous Statutes, whenever the text amends, repeals or changes the enactments of former years; and shall be half-bound in cloth with backs of white sheep skin and lettered, with the exception of a certain number to be named, by the Standing Committee on Printing which shall be bound in half-calf and gilt-lettered, and they shall be arranged for distribution in such manner either by the binding of the public general Acts, and Acts of a local or private character in separate volumes, or by binding them together in the same volumes with separate indexes or otherwise as the Governor in Council may deem expedient.
 {:.section}
