--- a/_sections/sc-1867-68-c-01-s-15.md
+++ b/_sections/sc-1867-68-c-01-s-15.md
@@ -7,7 +7,7 @@ chapter: 1
 section: 15
 permalink: /en/statutes/sc/1867-68/c-1/s-15.html
 ---
-Obligations of parties obtaining private Acts.
+<small>Obligations of parties obtaining private Acts.</small>
 {:.marginal-note}
 <span>15</span>{:.section-label}{:#s-15} The party obtaining an Act of a private or personal character shall furnish, at his own cost, one hundred and fifty printed copies of such Act to the Government of Canada.
 {:.section}
