--- a/_sections/sc-1867-68-c-01-s-01.md
+++ b/_sections/sc-1867-68-c-01-s-01.md
@@ -7,7 +7,7 @@ chapter: 1
 section: 1
 permalink: /en/statutes/sc/1867-68/c-1/s-1.html
 ---
-Form of enacting clause.
+<small>Form of enacting clause.</small>
 {: .marginal-note}
 <strong><span class="section-label" id="s-1">1</span></strong> The following words may be inserted in the preambles of statutes and shall indicate the authority by virtue of which they are passed: "Her Majesty, by and with the advice and consent of the Senate and House of Commons of Canada, enacts as follows:".
 {: .section}
