--- a/_sections/sc-1867-68-c-01-s-04.md
+++ b/_sections/sc-1867-68-c-01-s-04.md
@@ -7,8 +7,8 @@ chapter: 1
 section: 4
 permalink: /en/statutes/sc/1867-68/c-1/s-4.html
 ---
-Date of royal assent to be endorsed on every act.  
-Effect of such endorsement.
+<small>Date of royal assent to be endorsed on every act.  
+Effect of such endorsement.</small>
 {: .marginal-note}
 <span>4</span>{:#s-4 .section-label} The Clerk of the Senate shall endorse on every act of the Parliament of Canada, immediately after the title of such act, the day, month, and year when the same was by the Governor General assented to in Her Majesty's name, or reserved by him for the signification of Her Majesty's pleasure thereon,---and in the latter case, the Clerk of the Senate shall also endorse thereon the day, month and year when the Governor General has signified either by speech or message to the Senate and House of Commons, or by proclamation, that the same was laid before Her Majesty in Council, and that Her Majesty was pleased to assent tot he same;---And such indorsement shall be taken to be a part of such act, and the date of such assent or signification, as the case may be, shall be the date of the commencement of the act, if no later commencement be therein provided.
 {: .section}
