--- a/_sections/sc-1867-68-c-01-s-05.md
+++ b/_sections/sc-1867-68-c-01-s-05.md
@@ -7,7 +7,7 @@ chapter: 1
 section: 5
 permalink: /en/statutes/sc/1867-68/c-1/s-5.html
 ---
-Every act may be amended during session in which it passes.
+<small>Every act may be amended during session in which it passes.</small>
 {: .marginal-note}
 <span>5</span>{:#s-5 .section-label} Any act of the Parliament of Canada may be amended, altered, or repealed by any act to be passed in the same session thereof.
 {: .section}
