--- a/_sections/sc-1867-68-c-01-s-01.md
+++ b/_sections/sc-1867-68-c-01-s-01.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-1.html
 ---
 <small>Form of enacting clause.</small>
 {: .marginal-note}
-<strong><span class="section-label" id="s-1">1</span></strong> The following words may be inserted in the preambles of statutes and shall indicate the authority by virtue of which they are passed: "Her Majesty, by and with the advice and consent of the Senate and House of Commons of Canada, enacts as follows:".
+<strong><a><span>1.</span>{:.section-label}</a>{:.section-label}{:#s-1}</strong> The following words may be inserted in the preambles of statutes and shall indicate the authority by virtue of which they are passed: "Her Majesty, by and with the advice and consent of the Senate and House of Commons of Canada, enacts as follows:".
 {: .section}
