--- a/_sections/sc-1867-68-c-01-s-06.md
+++ b/_sections/sc-1867-68-c-01-s-06.md
@@ -9,7 +9,7 @@ permalink: /en/statutes/sc/1867-68/c-1/s-6.html
 ---
 <small>How enactments shall be construed.</small>
 {: .marginal-note}
-<span>6</span>{:#s-6 .section-label} In construing this or any act of the Parliament of Canada, unless it is otherwise provided, or there be something in the context or other provisions thereof indicating a different meaning or calling for a different construction:
+<strong><a><span>6.</span>{:.section-label}</a>{:#s-6}{:.section-label}</strong> In construing this or any act of the Parliament of Canada, unless it is otherwise provided, or there be something in the context or other provisions thereof indicating a different meaning or calling for a different construction:
 {: .section}
 <small>To apply to the whole Dominion.</small>
 {: .marginal-note}
