--- a/_sections/sc-1867-68-c-01-s-07.md
+++ b/_sections/sc-1867-68-c-01-s-07.md
@@ -12,7 +12,7 @@ permalink: /en/statutes/sc/1867-68/c-1/s-7.html
 <small>Interpretation of certain words.</small>
 {: .marginal-note}
 
-<span>7</span>{:#s-7 .section-label} Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
+<strong><a><span>7</span>{:.section-label}</a>{:#s-7}{:.section-label}</strong> Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
 {: .section}
 
 <dl class="definition">
