--- a/_sections/sc-1867-68-c-01-s-08.md
+++ b/_sections/sc-1867-68-c-01-s-08.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-8.html
 ---
 <small>Acts to be done by more than two.</small>
 {:.marginal-note}
-<span>8</span>{:.section-label}{:#s-8} When any act or thing is required to be done by more than two persons, a majority of them may do it.
+<strong><a><span>8.</span>{:.section-label}</a>{:.section-label}{:#s-8}</strong> When any act or thing is required to be done by more than two persons, a majority of them may do it.
 {:.section}
