--- a/_sections/sc-1867-68-c-01-s-10.md
+++ b/_sections/sc-1867-68-c-01-s-10.md
@@ -11,7 +11,7 @@ permalink: /en/statutes/sc/1867-68/c-1/s-10.html
 <ul class="section provision-list">
   <li>
     <p class="marginal-note"><small>Printer to distribute printed copies of Acts.</small></p>
-    <p class="subsection"><span class="section-label" id="s-10">10</span> Her Majesty&rsquo;s Printer shall, immediately after the close of each Session of Parliament, or so soon after as may be practicable, deliver or transmit by Post, or otherwise, in the most economical mode, the proper number of printed copies of the Acts of Parliament, in the English language or French language, or both languages, (to be printed by him at the public expense,) to the parties hereinafter mentioned, that is to say:</p>
+    <p class="subsection"><strong><a class="section-label" id="s-10"><span class="section-label">10.</span></a></strong> Her Majesty&rsquo;s Printer shall, immediately after the close of each Session of Parliament, or so soon after as may be practicable, deliver or transmit by Post, or otherwise, in the most economical mode, the proper number of printed copies of the Acts of Parliament, in the English language or French language, or both languages, (to be printed by him at the public expense,) to the parties hereinafter mentioned, that is to say:</p>
   </li>
   <li>
     <p class="marginal-note"><small>Who shall receive such copies.</small></p>
