--- a/_sections/sc-1867-68-c-01-s-14.md
+++ b/_sections/sc-1867-68-c-01-s-14.md
@@ -10,5 +10,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-14.html
 <small>Report by Printer as to number of copies distributed.</small>  
 <small>And as to expense incurred by him.</small>
 {:.marginal-note}
-<span>14</span>{:.section-label}{:#s-14} Her Majesty's Printer shall, before the opening of each session of Parliament, make a report in triplicate to the Governor General, (to be by him laid before each House of Parliament within fifteen days after the opening of such session), showing the number of copies of the Acts of each session which have been printed and distributed by him since the then last session,---and the departments, administrative bodies, officers and persons to whom the same have been distributed, the number of copies delivered to each, and under what authority, and the numbers of copies of the Acts of each session then remaining in his hands,---and containing also a detailed account of the expenses by him actually incurred in carrying this Act into effect, to the end that provision may be made for defraying the same, after such account has been duly audited and allowed.
+<strong><a><span>14.</span>{:.section-label}</a>{:.section-label}{:#s-14}</strong> Her Majesty's Printer shall, before the opening of each session of Parliament, make a report in triplicate to the Governor General, (to be by him laid before each House of Parliament within fifteen days after the opening of such session), showing the number of copies of the Acts of each session which have been printed and distributed by him since the then last session,---and the departments, administrative bodies, officers and persons to whom the same have been distributed, the number of copies delivered to each, and under what authority, and the numbers of copies of the Acts of each session then remaining in his hands,---and containing also a detailed account of the expenses by him actually incurred in carrying this Act into effect, to the end that provision may be made for defraying the same, after such account has been duly audited and allowed.
 {:.section}
