--- a/_sections/sc-1867-68-c-01-s-09.md
+++ b/_sections/sc-1867-68-c-01-s-09.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-9.html
 ---
 <small>Certified copy of every Act to be furnished to Queen's Printer.</small>
 {:.marginal-note}
-<span>9</span>{:.section-label}{:#s-9} The Clerk of the Senate shall furnish Her Majesty's Printer with a certified copy of every Act of the Parliament of Canada so soon as the same has received the Royal Assent, or if the Bill has been reserved, so soon as the Royal Assent thereto has been proclaimed in Canada.
+<strong><a><span>9.</span>{:.section-label}</a>{:.section-label}{:#s-9}</strong> The Clerk of the Senate shall furnish Her Majesty's Printer with a certified copy of every Act of the Parliament of Canada so soon as the same has received the Royal Assent, or if the Bill has been reserved, so soon as the Royal Assent thereto has been proclaimed in Canada.
 {:.section}
