add treatment, style changes

--- a/_chapters/sc-1867-68-c-01.md
+++ b/_chapters/sc-1867-68-c-01.md
@@ -10,8 +10,10 @@ citeoldlong: 31 Victoria
 citeold: 31 V.
 bill: No. 2
 ---
-<h2>Table of Contents</h2>
 <nav>
+  <h2>Treatment of the Act</h2>
+  <a href="./treatment.html">R.S.C, 1886</a>
+  <h2>Table of Contents</h2>
   <ul class="toc-indent">
     <li>
       <a href="#top">{{page.shorttitle}}</a>
@@ -52,6 +54,7 @@ bill: No. 2
     </li>
   </ul>
 </nav>
+<main markdown="1">
 {% include acttopmatter.md %}
 <small>Preamble.</small>
 {: .marginal-note}
@@ -100,3 +103,4 @@ bill: No. 2
     {{ section.content }}
   {% endif %}
 {% endfor %}
+</main>
