add disposal of act

--- a/_sections/sc-1867-68-c-01-s-02.md
+++ b/_sections/sc-1867-68-c-01-s-02.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-2.html
 ---
 <small>Other clauses to follow in concise form.</small>
 {: .marginal-note}
-<strong><a><span>2.</span>{:.section-label}</a>{:#s-2}{:.section-label}</strong> After the insertion of the words aforesaid, which shall follow the setting forth of the considerations or reasons upon which the law is grounded, and which shall with these considerations or reasons constitute the entire preamble, the various clauses of the statute shall follow in a concise and enunciative form.
+<strong><a id="s-2"><span>2.</span>{:.section-label}</a>{:.section-label}</strong> After the insertion of the words aforesaid, which shall follow the setting forth of the considerations or reasons upon which the law is grounded, and which shall with these considerations or reasons constitute the entire preamble, the various clauses of the statute shall follow in a concise and enunciative form.
 {:.section}
