--- a/_sections/sc-1867-68-c-01-s-05.md
+++ b/_sections/sc-1867-68-c-01-s-05.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-5.html
 ---
 <small>Every act may be amended during session in which it passes.</small>
 {: .marginal-note}
-<strong><a><span>5.</span>{:.section-label}</a>{:#s-5}{:.section-label}</strong> Any act of the Parliament of Canada may be amended, altered, or repealed by any act to be passed in the same session thereof.
+<strong><a id="s-5"><span>5.</span>{:.section-label}</a>{:.section-label}</strong> Any act of the Parliament of Canada may be amended, altered, or repealed by any act to be passed in the same session thereof.
 {: .section}
