--- a/_sections/sc-1867-68-c-01-s-15.md
+++ b/_sections/sc-1867-68-c-01-s-15.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-15.html
 ---
 <small>Obligations of parties obtaining private Acts.</small>
 {:.marginal-note}
-<strong><a><span>15.</span>{:.section-label}</a>{:.section-label}{:#s-15}</strong> The party obtaining an Act of a private or personal character shall furnish, at his own cost, one hundred and fifty printed copies of such Act to the Government of Canada.
+<strong><a id="s-15"><span>15.</span>{:.section-label}</a>{:.section-label}</strong> The party obtaining an Act of a private or personal character shall furnish, at his own cost, one hundred and fifty printed copies of such Act to the Government of Canada.
 {:.section}
