--- a/_sections/sc-1867-68-c-01-s-16.md
+++ b/_sections/sc-1867-68-c-01-s-16.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-16.html
 ---
 <small>Short title.</small>
 {:.marginal-note}
-<strong><a><span>16.</span>{:.section-label}</a>{:.section-label}{:#s-16}</strong> This Act may be cited as the <cite>Interpretation Act</cite>{:.x-ref-external-act}.
+<strong><a id="s-16"><span>16.</span>{:.section-label}</a>{:.section-label}</strong> This Act may be cited as the <cite>Interpretation Act</cite>{:.x-ref-external-act}.
 {:.section}
