--- a/_chapters/sc-1867-68-c-01.md
+++ b/_chapters/sc-1867-68-c-01.md
@@ -12,7 +12,7 @@ bill: No. 2
 ---
 <nav>
   <h2>Treatment of the Act</h2>
-  <a href="./treatment.html">R.S.C, 1886</a>
+  <a href="./treatment.html">Repealed.</a>
   <h2>Table of Contents</h2>
   <ul class="toc-indent">
     <li>
