--- a/_sections/sc-1867-68-c-01-s-03.md
+++ b/_sections/sc-1867-68-c-01-s-03.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-3.html
 ---
 <small>The interpretation clauses to apply to all acts hereafter passed.</small>
 {: .marginal-note}
-<strong><a><span>3.</span>{:.section-label}</a>{:#s-3}{:.section-label}</strong> This section and the fourth, fifth, sixth, seventh, and eighth sections of this act, and each provision thereof, shall extend and apply to every act passed in the session held in this thirtieth year of Her Majesty's Reign, and in any future session of the Parliament of Canada, except insofar as the provision is inconsistent with the intent and object of such act, or the interpretation which such provision would give to any word, expression, or clause is inconsistent with the context,---and except insofar as any provision thereof is in any such act declared not applicable thereto;---Nor shall the omission in any act of a declaration that the "<cite>Interpretation Act</cite>" shall apply thereto, be construed to prevent its so applying, although such express declaration may be inserted in some other act or acts of the same session.
+<strong><a id="s-3"><span>3.</span>{:.section-label}</a>{:.section-label}</strong> This section and the fourth, fifth, sixth, seventh, and eighth sections of this act, and each provision thereof, shall extend and apply to every act passed in the session held in this thirtieth year of Her Majesty's Reign, and in any future session of the Parliament of Canada, except insofar as the provision is inconsistent with the intent and object of such act, or the interpretation which such provision would give to any word, expression, or clause is inconsistent with the context,---and except insofar as any provision thereof is in any such act declared not applicable thereto;---Nor shall the omission in any act of a declaration that the "<cite>Interpretation Act</cite>" shall apply thereto, be construed to prevent its so applying, although such express declaration may be inserted in some other act or acts of the same session.
 {: .section}
