--- a/_sections/sc-1867-68-c-01-s-06.md
+++ b/_sections/sc-1867-68-c-01-s-06.md
@@ -9,21 +9,21 @@ permalink: /en/statutes/sc/1867-68/c-1/s-6.html
 ---
 <small>How enactments shall be construed.</small>
 {: .marginal-note}
-<strong><a><span>6.</span>{:.section-label}</a>{:#s-6}{:.section-label}</strong> In construing this or any act of the Parliament of Canada, unless it is otherwise provided, or there be something in the context or other provisions thereof indicating a different meaning or calling for a different construction:
+<strong><a id="s-6"><span>6.</span>{:.section-label}</a>{:.section-label}</strong> In construing this or any act of the Parliament of Canada, unless it is otherwise provided, or there be something in the context or other provisions thereof indicating a different meaning or calling for a different construction:
 {: .section}
 <small>To apply to the whole Dominion.</small>
 {: .marginal-note}
-<span>(1)</span>{:#s-6-(1) .law-label} The enactments in any act apply to the whole Dominion of Canada;
+<span id="s-6-(1)">(1)</span>{:.law-label} The enactments in any act apply to the whole Dominion of Canada;
 {: .subsection}
 <small>Application of expressions in present tense.</small>
 {: .marginal-note}
-<span>(2)</span>{:#s-6-(2) .law-label} The Law is to be considered as always speaking, and whenever any matter or thing is expressed in the present tense, the same is to be applied to the circumstances as they arise, so that effect may be given to each act and every part thereof according to its spirit, true intent, and meaning;
+<span id="s-6-(2)">(2)</span>{:.law-label} The Law is to be considered as always speaking, and whenever any matter or thing is expressed in the present tense, the same is to be applied to the circumstances as they arise, so that effect may be given to each act and every part thereof according to its spirit, true intent, and meaning;
 {: .subsection}
 <small>"Shall" and "may."</small>
 {: .marginal-note}
-<span>(3)</span>{:#s-6-(3) .law-label} The word "shall" is to be construed as imperative, and the word "may" as permissive;
+<span id="s-6-(3)">(3)</span>{:.law-label} The word "shall" is to be construed as imperative, and the word "may" as permissive;
 {: .subsection}
 <small>"Herein."</small>
 {: .marginal-note}
-<span>(4)</span>{:#s-6-(4) .law-label} Whenever the word "herein" is used in any section of an act, it is to be understood to relate to the whole act and not to that section only.
+<span id="s-6-(4)">(4)</span>{:.law-label} Whenever the word "herein" is used in any section of an act, it is to be understood to relate to the whole act and not to that section only.
 {: .subsection}
