--- a/_sections/sc-1867-68-c-01-s-07.md
+++ b/_sections/sc-1867-68-c-01-s-07.md
@@ -12,7 +12,7 @@ permalink: /en/statutes/sc/1867-68/c-1/s-7.html
 <small>Interpretation of certain words.</small>
 {: .marginal-note}
 
-<strong><a><span>7</span>{:.section-label}</a>{:#s-7}{:.section-label}</strong> Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
+<strong><a id="s-7"><span>7</span>{:.section-label}</a>{:.section-label}</strong> Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
 {: .section}
 
 <dl class="definition">
@@ -206,24 +206,24 @@ permalink: /en/statutes/sc/1867-68/c-1/s-7.html
 
 <small>Contravention of Acts.</small>
 {: .marginal-note}
-<span>(20)</span>{:.law-label}{:#s-7-(20)} Any willful contravention of any Act, which is not made any offence of some other kind, shall be a misdemeanor, and punishable accordingly.
+<span id="s-7-(20)">(20)</span>{:.law-label} Any willful contravention of any Act, which is not made any offence of some other kind, shall be a misdemeanor, and punishable accordingly.
 {: .subsection}
 <small>Punishement for contravention.</small>
 {:.marginal-note}
-<span>(21)</span>{:.law-label}{:#s-7-(21)} Whenever any willful contravention of any Act is made an offence of any particular kind or name, the person guilty of such contravention shall, on conviction thereof, be punishable in the manner in which such offence is by law punishable.
+<span id="s-7-(21)">(21)</span>{:.law-label} Whenever any willful contravention of any Act is made an offence of any particular kind or name, the person guilty of such contravention shall, on conviction thereof, be punishable in the manner in which such offence is by law punishable.
 {:.subsection}
 <small>Recovery of penalties when no other mode is prescribed  
 Appropriation.</small>
 {:.marginal-note}
-<span>(22)</span>{:.law-label}{:#s-7-(22)} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown.
+<span id="s-7-(22)">(22)</span>{:.law-label} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown.
 {:.subsection}
 <small>Crown's share when not otherwise appropriated to form part of Con. Rev. Fund.</small>
 {:.marginal-note}
-<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly.
+<span id="s-7-(23)">(23)</span>{:.law-label} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly.
 {:.subsection}
 <small>Paying and accounting for moneys appropriated by statute.</small>
 {:.marginal-note}
-<span>(24)</span>{:.law-label}{:#s-7-(24)} If any sum of the public money be by any Act appropriated for any purpose or directed to be paid by the Governor General,---then, if no other provision be made respecting it, such sum shall be payable under warrant of the Governor General directed to the Receiver General, out of the Consolidated Revenue Fund of Canada; And all persons entrusted with the expenditure of any such sum or any part thereof shall account for the same in such manner and form, with such vouchers, at such periods and to such officer, as the Governor General may direct.
+<span id="s-7-(24)">(24)</span>{:.law-label} If any sum of the public money be by any Act appropriated for any purpose or directed to be paid by the Governor General,---then, if no other provision be made respecting it, such sum shall be payable under warrant of the Governor General directed to the Receiver General, out of the Consolidated Revenue Fund of Canada; And all persons entrusted with the expenditure of any such sum or any part thereof shall account for the same in such manner and form, with such vouchers, at such periods and to such officer, as the Governor General may direct.
 {:.subsection}
 
 <dl class="definition">
@@ -241,70 +241,70 @@ Appropriation.</small>
 
 <small>Imprisonment where to be, when no special place is mentioned.</small>
 {:.marginal-note}
-<span>(26)</span>{:.law-label}{:#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken.
+<span id="s-7-(26)">(26)</span>{:.law-label} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken.
 {:.subsection}
 <small>Words giving power to appoint include power to remove.</small>
 {:.marginal-note}
-<span>(27)</span>{:.law-label}{:#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested.
+<span id="s-7-(27)">(27)</span>{:.law-label} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested.
 {:.subsection}
 <small>Directions to public officer, to apply to his succesors and his deputy.</small>
 {:.marginal-note}
-<span>(28)</span>{:.law-label}{:#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful deputy.
+<span id="s-7-(28)">(28)</span>{:.law-label} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful deputy.
 {:.subsection}
 <small>Appointments by Governor to be during pleasure.</small>
 {:.marginal-note}
-<span>(29)</span>{:.law-label}{:#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their commissions or appointments.
+<span id="s-7-(29)">(29)</span>{:.law-label} All officers now appointed or hereafter to be appointed by the Governor General whether by commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their commissions or appointments.
 {:.subsection}
 <small>Words constituting a corporation to vest certain powers in it.</small>
 {:.marginal-note}
-<span>(30)</span>{:.law-label}{:#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation.
+<span id="s-7-(30)">(30)</span>{:.law-label} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation.
 {:.subsection}
 <small>Slight deviation from forms not to invalidate.</small>
 {:.marginal-note}
-<span>(31)</span>{:.law-label}{:#s-7-(31)} Where forms are prescribed, slight deviations therefrom, not affecting the substance or calculated to mislead, shall not vitiate them.
+<span id="s-7-(31)">(31)</span>{:.law-label} Where forms are prescribed, slight deviations therefrom, not affecting the substance or calculated to mislead, shall not vitiate them.
 {:.subsection}
 <small>Power to make by-laws, what included by.</small>
 {:.marginal-note}
-<span>(32)</span>{:.law-label}{:#s-7-(32)} Where powers to make by-laws, regulations, rules, or orders is conferred, it shall include the power to alter or revoke the same and make others.
+<span id="s-7-(32)">(32)</span>{:.law-label} Where powers to make by-laws, regulations, rules, or orders is conferred, it shall include the power to alter or revoke the same and make others.
 {:.subsection}
 <small>Acts not to affect the Crown, unless specially declared to do so.  
 As to Acts of private nature.</small>
 {:.marginal-note}
-<span>(33)</span>{:.law-label}{:#s-7-(33)} No provision or enactment in any Act shall affect in any manner or way whatsoever the rights of Her Majesty, Her Heirs or Successors, unless it is expressly stated therein that Her Majesty shall be bound thereby; nor if such Act be of the nature of a private Act shall it affect the rights of any person or of any body politic, corporate, or collegiate, such only excepted as are therein mentioned or referred to.
+<span id="s-7-(33)">(33)</span>{:.law-label} No provision or enactment in any Act shall affect in any manner or way whatsoever the rights of Her Majesty, Her Heirs or Successors, unless it is expressly stated therein that Her Majesty shall be bound thereby; nor if such Act be of the nature of a private Act shall it affect the rights of any person or of any body politic, corporate, or collegiate, such only excepted as are therein mentioned or referred to.
 {:.subsection}
 <small>Power always reserved to Parliament to repeal or amend any Act.  
 As to bank charters.</small>
 {:.marginal-note}
-<span>(34)</span>{:.law-label}{:#s-7-(34)} Every Act shall be so construed as to reserve to Parliament the power of repealing or amending it, and of revoking, restricting or modifying any power, privilege or advantage thereby vested in or granted to any person or party, whenever such repeal, amendment, revocation, restriction or modification is deemed by Parliament to be required for the public good; And unless it is otherwise expressly provided in any Act passed for chartering any bank, it shall be in the discretion of the Parliament at any time thereafter to make such provisions and impose such restrictions with respect to the amount and description of notes which may be issued by such bank as to Parliament appears expedient.
+<span id="s-7-(34)">(34)</span>{:.law-label} Every Act shall be so construed as to reserve to Parliament the power of repealing or amending it, and of revoking, restricting or modifying any power, privilege or advantage thereby vested in or granted to any person or party, whenever such repeal, amendment, revocation, restriction or modification is deemed by Parliament to be required for the public good; And unless it is otherwise expressly provided in any Act passed for chartering any bank, it shall be in the discretion of the Parliament at any time thereafter to make such provisions and impose such restrictions with respect to the amount and description of notes which may be issued by such bank as to Parliament appears expedient.
 {:.subsection}
 <small>Effect of repeal of Act on persons acting under it.  
 Not to effect certain proceedings.</small>
 {:.marginal-note}
-<span>(35)</span>{:.law-label}{:#s-7-(35)} Where any Act is repealed wholly or in part and other provisions substituted, all officers, persons, bodies politic or corporate acting under the old law shall continue to act as if appointed under the new law, until others are appointed in their stead; and all proceedings taken under the old law shall be taken up and continued under the new law when not inconsistent therewith; and all penalties and forfeitures may be recovered and all proceedings had in relation to matters which have happened before the repeal in the same manner as if the law were still in force, pursuing the new provisions as far as they can be adapted to the old law.
+<span id="s-7-(35)">(35)</span>{:.law-label} Where any Act is repealed wholly or in part and other provisions substituted, all officers, persons, bodies politic or corporate acting under the old law shall continue to act as if appointed under the new law, until others are appointed in their stead; and all proceedings taken under the old law shall be taken up and continued under the new law when not inconsistent therewith; and all penalties and forfeitures may be recovered and all proceedings had in relation to matters which have happened before the repeal in the same manner as if the law were still in force, pursuing the new provisions as far as they can be adapted to the old law.
 {:.subsection}
 <small>As to acts, etc., done before repeal.</small>
 {:.marginal-note}
-<span>(36)</span>{:.law-label}{:#s-7-(36)} The repeal of an Act at any time shall not affect any act done or any right or right of action existing, accruing, accrued or established or any proceedings commenced in a civil cause, before the time when such repeal shall take effect; but the proceedings in such case shall be conformable vhen necessary to the repealing Act.
+<span id="s-7-(36)">(36)</span>{:.law-label} The repeal of an Act at any time shall not affect any act done or any right or right of action existing, accruing, accrued or established or any proceedings commenced in a civil cause, before the time when such repeal shall take effect; but the proceedings in such case shall be conformable vhen necessary to the repealing Act.
 {:.subsection}
 <small>Offences committed and penalties incurred not affected by repeal.</small>
 {:.marginal-note}
-<span>(37)</span>{:.law-label}{:#s-7-(37)} No offence committed and no penalty or forfeiture incurred and no proceeding pending under any Act at any time repealed shall be affected by the repeal, except that the proceedings shall be conformable when necessary to the repealing Act, and that where any penalty, forfeiture or punishment shall have been mitigated by any of the provisions of the repealing Act, such provisions shall be extended and applied to any judgment to be pronounced after such repeal.
+<span id="s-7-(37)">(37)</span>{:.law-label} No offence committed and no penalty or forfeiture incurred and no proceeding pending under any Act at any time repealed shall be affected by the repeal, except that the proceedings shall be conformable when necessary to the repealing Act, and that where any penalty, forfeiture or punishment shall have been mitigated by any of the provisions of the repealing Act, such provisions shall be extended and applied to any judgment to be pronounced after such repeal.
 {:.subsection}
 <small>All Acts to be deemed public Acts, as regards pleading.  
 Proof of Acts.</small>
 {:.marginal-note}
-<span>(38)</span>{:.law-label}{:#s-7-(38)} Every Act shall, unless by express provision it is declared to be a private Act, be deemed to be a public Act, and shall be judicially noticed by all judges, justices of the peace, and others without being specially pleaded;---And all copies of Acts, public or private, printed by the Queen's Printer, shall be evidence of such Acts and of their contents, and every copy purporting to be printed by the Queen's Printer shall be deemed to be so printed, unless the contrary be shown.
+<span id="s-7-(38)">(38)</span>{:.law-label} Every Act shall, unless by express provision it is declared to be a private Act, be deemed to be a public Act, and shall be judicially noticed by all judges, justices of the peace, and others without being specially pleaded;---And all copies of Acts, public or private, printed by the Queen's Printer, shall be evidence of such Acts and of their contents, and every copy purporting to be printed by the Queen's Printer shall be deemed to be so printed, unless the contrary be shown.
 {:.subsection}
 <small>Preamble to be a part of Act.  
 All Acts remedial, and to be construed as such.</small>
 {:.marginal-note}
-<span>(39)</span>{:.law-label}{:#s-7-(39)} The preamble of every such Act as aforesaid shall be deemed a part thereof intended to assist in explaining the purport and object of the Act;---And every Act and every provision or enactment thereof shall be deemed remedial, whether its immediate purport be to direct the doing of any thing which Parliament deems to be for the public good or to prevent or punish the doing of any thing which it deems contrary to the public good,---and shall accordingly receive such fair, large and liberal construction and interpretation as will best ensure the attainment of the object of the Act and of such provision or enactment according to their true intent, meaning and spirit.
+<span id="s-7-(39)">(39)</span>{:.law-label} The preamble of every such Act as aforesaid shall be deemed a part thereof intended to assist in explaining the purport and object of the Act;---And every Act and every provision or enactment thereof shall be deemed remedial, whether its immediate purport be to direct the doing of any thing which Parliament deems to be for the public good or to prevent or punish the doing of any thing which it deems contrary to the public good,---and shall accordingly receive such fair, large and liberal construction and interpretation as will best ensure the attainment of the object of the Act and of such provision or enactment according to their true intent, meaning and spirit.
 {:.subsection}
 <small>Applicable rules of construction not excluded.</small>
 {:.marginal-note}
-<span>(40)</span>{:.law-label}{:#s-7-(40)} Nothing in this section shall exclude the application to any Act of any rule of construction applicable thereto and not inconsistent with this section.
+<span id="s-7-(40)">(40)</span>{:.law-label} Nothing in this section shall exclude the application to any Act of any rule of construction applicable thereto and not inconsistent with this section.
 {:.subsection}
 <small>Provisions herein to apply to this Act.</small>
 {:.marginal-note}
-<span>(41)</span>{:.law-label}{:#s-7-(41)} The provisions of this Act shall apply to the construction thereof, and to the words and expressions used therein.
+<span id="s-7-(41)">(41)</span>{:.law-label} The provisions of this Act shall apply to the construction thereof, and to the words and expressions used therein.
 {:.subsection}
