--- a/_sections/sc-1867-68-c-01-s-12.md
+++ b/_sections/sc-1867-68-c-01-s-12.md
@@ -9,5 +9,5 @@ permalink: /en/statutes/sc/1867-68/c-1/s-12.html
 ---
 <small>If any copies remain, etc.</small>
 {:.marginal-note}
-<strong><a><span>12.</span>{:.section-label}</a>{:.section-label}{:#s-12}</strong> If after the distribution of the said printed Acts any copies remain in the hands of Her Majesty's Printer, he may deliver any number thereofo any person by order of the Governor General, on notice thereof by the Secretary of State of Canada,---or to the members of the Senate or of the House of Commons, on the order of the Speaker of the said Houses respectively.
+<strong><a id="s-12"><span>12.</span>{:.section-label}</a>{:.section-label}</strong> If after the distribution of the said printed Acts any copies remain in the hands of Her Majesty's Printer, he may deliver any number thereofo any person by order of the Governor General, on notice thereof by the Secretary of State of Canada,---or to the members of the Senate or of the House of Commons, on the order of the Speaker of the said Houses respectively.
 {:.section}
